package br.unitins.tp1.pizzaria.model;

public enum CategoriaIngrediente {
    MASSA,
    QUEIJO,
    PROTEINA,
    MOLHO,
    OUTRO
}
