package br.unitins.tp1.pizzaria.model;

public enum TamanhoPizza {
    PEQUENA,
    MEDIA,
    GRANDE,
    GIGA
}
