export enum NivelAcesso {
  Admin = 'ADMIN',
  Gerente = 'GERENTE',
  Supervisor = 'SUPERVISOR',
  Atendente = 'ATENDENTE'
}
